samples/_failures_safe/1761654916_9218d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4de40575.c: In function ‘main’:
./samples/SAFE/__tmp_4de40575.c:164:26: error: invalid operands to binary < (have ‘size_t’ {aka ‘long unsigned int’} and ‘struct Matrix’)
  164 |     for (size_t i = 0; i < a
      |                          ^
./samples/SAFE/__tmp_4de40575.c:164:29: error: expected ‘;’ at end of input
  164 |     for (size_t i = 0; i < a
      |                             ^
      |                             ;
./samples/SAFE/__tmp_4de40575.c:164:5: error: expected declaration or statement at end of input
  164 |     for (size_t i = 0; i < a
      |     ^~~
